--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             /* place-items: center; */
             color: black;
             background-color: rgb(240, 236, 236);
-            margin-left: 470px;
+            margin: auto;
             margin-top: 150px;
             text-align: center;
             border: solid blueviolet;
